# rapid-toolbox

./: .gitignore  LICENSE  README.md  README_zh-CN.md  components.d.ts  index.html  package-lock.json  package.json  vite.config.ts
src/: AppLibraryView.vue  LauncherView.vue  WindowFrame.vue  main.ts  stores.ts  themes.ts  types.ts  util.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  lib.rs  main.rs  util.rs
src-tauri/src/config/: error.rs  structure.rs
src-tauri/tests/: test_config.rs  test_util.rs
src-tauri/tests/config/: invalid_format_config.json  invalid_json_config.json
src/components/: AboutDialog.vue  CategoryAppList.vue  CategoryList.vue  CategoryListItem.vue  GridAppItem.vue  LibraryAppDialog.vue  SettingsDialog.vue  ThemeColorPicker.vue
src/i18n/: en.json  index.ts  zh-CN.json
src/styles/: common.css
