[package]
name = "rapid-toolbox"
version = "0.1.0"
description = "A portable app launcher for building and distributing your collection of apps"
authors = ["WinTP"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "rapid_toolbox_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2.4.0"
tauri-plugin-prevent-default = "2.1.1"
tauri-plugin-positioner = "2.3.0"
tauri-plugin-dialog = "2.3.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22.1"
image = "0.25.6"

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.61.3"
features = [
    "Win32_Storage_FileSystem",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Controls",
    "Win32_Graphics_Gdi"
]
